# ar.core

./: .gitignore  CMakeLists.txt  Makefile  README.md
android/: .gitignore  README.md  build.gradle  gradlew  settings.gradle
android/apk/: readme.txt
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/khoben/arcore/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: android.cpp  android.hpp  native-lib.cpp
android/app/src/main/java/com/khoben/arcore/: MainActivity.java  OpenCVJNI.java  UtilsJNI.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/khoben/arcore/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
include/: Recognition.hpp  TrackerEntity.hpp  Tracking.hpp
src/: TrackerEntity.cpp  Tracking.cpp  android.cpp  android.hpp  main.cpp
src/AR/: AR.hpp  ARMarkerless.cpp  ARMarkerless.hpp  Ar.cpp  Ar.hpp
src/ARStore/: MarkerlessStorage.cpp  MarkerlessStorage.hpp  Storage.hpp
src/Detection/: Detect.cpp  Detect.hpp  DetectMarkerless.cpp  DetectMarkerless.hpp
src/Recognition/: BoVw.cpp  BoVw.hpp  FeatureDB.cpp  FeatureDB.hpp  MarkerlessDB.cpp  MarkerlessDB.hpp  MarkerlessTrackable.cpp  MarkerlessTrackable.hpp  Recognition.cpp  Recognition.hpp  TrackableEntity.cpp  TrackableEntity.hpp
src/Tracking/: MarkerlessTrackable.cpp  MarkerlessTrackable.hpp  Trackable.cpp  Trackable.hpp  Tracker.cpp  Tracker.hpp  TrackerEntity.hpp  Tracking.cpp  Tracking.hpp
src/Utils/: CvUtils.hpp
src/Utils/base64/: base64.cpp  base64.hpp
src/Utils/threadpool/: queue.cpp  queue.hpp  semaphore.hpp  thread_pool.hpp
uml/: uml.puml
